--- a/snippets/preamble.html
+++ b/snippets/preamble.html
@@ -20,7 +20,7 @@
       <a title="dmacvicar on Twitter" href="https://twitter.com/dmacvicar">
         <i class="fa fa-twitter-square"></i>
       </a>
-      <a title="RSS feed" id="atom" href="rss.xml">
+      <a title="RSS feed" id="atom" href="posts/rss.xml">
         <i class="fa fa-rss-square"></i>
       </a>
     </div>
