--- a/snippets/preamble.html
+++ b/snippets/preamble.html
@@ -5,7 +5,7 @@
   </a>
   <h2>I'm <a href="/">Duncan Mac-Vicar P.</a></h2>
   <div id="bio">
-    <small><p>I am inspired by creating software. I do that mostly at <a href="https://www.suse.com"><!--img src="https://www.suse.com/common/img/suse_54x33.png" height="33" width="54" style="float: left;"-->SUSE</a>.
+    <small><p>I am inspired by creating software and learning from others.</p>
       <p>When things break, I fix them or go play guitar...</p></small>
   </div>
   <div id="social">
