deploy: 213397ff0ad3e932046dd53c48b03560f5794bfc

--- a/tutorials/rpm-packaging/index.html
+++ b/tutorials/rpm-packaging/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 11 Dec. 2021 -->
+<!-- 02 Jan. 2022 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>RPM Packaging Tutorial</title>
@@ -372,7 +372,7 @@ Lets start with a famous UNIX tool: <code>rsync</code>.
 So a package is an archive file:
 </p>
 
-<pre class="example" id="org0e76df4">
+<pre class="example" id="org38c6798">
 rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -380,7 +380,7 @@ rsync-3.1.2-1.5.x86_64.rpm
 containing all files related to the application:
 </p>
 
-<pre class="example" id="org9fac079">
+<pre class="example" id="org5f61a0f">
 $ rpm -qpl rsync-3.1.2-1.5.x86_64.rpm
 
 /etc/logrotate.d/rsync
@@ -411,7 +411,7 @@ to:
 <li><code>Name</code>, <code>Summary</code>, <code>Description</code>, <code>License</code>, etc.</li>
 </ul>
 
-<pre class="example" id="orgc91a539">
+<pre class="example" id="org51685a1">
 $ rpm -qpi rsync-3.1.2-1.5.x86_64.rpm
 
 Name        : rsync
@@ -448,7 +448,7 @@ Distribution: openSUSE Tumbleweed
 (<code>Requires</code>)</li>
 </ul>
 
-<pre class="example" id="org4314742">
+<pre class="example" id="org5712b8d">
 $ rpm -qp --requires rsync-3.1.2-1.5.x86_64.rpm
 /bin/sh
 /usr/bin/perl
@@ -489,7 +489,7 @@ called during runtime.
 <li>What does the package provide for other packages to work (<code>Provides</code>)</li>
 </ul>
 
-<pre class="example" id="org63de214">
+<pre class="example" id="org5746883">
 $ rpm -qp --provides rsync-3.1.2-1.5.x86_64.rpm
 config(rsync) = 3.1.2-1.5
 rsync = 3.1.2-1.5
@@ -518,7 +518,7 @@ level.
 Packages can be installed with the <code>rpm</code> tools:
 </p>
 
-<pre class="example" id="org94bd626">
+<pre class="example" id="orgffd9e43">
 $ rpm -U rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -529,7 +529,7 @@ the <code>-p</code> option and use what is called the NVRA
 subset of it, e.g. just name (<code>rsync</code>).
 </p>
 
-<pre class="example" id="orgd8df2cf">
+<pre class="example" id="org6e10356">
 $ rpm -q --provides rsync
 </pre>
 
@@ -595,7 +595,7 @@ build system scanned the executable <code>/usr/lib/rsync</code> and realized it 
 linked against <code>libc.so.6</code>:
 </p>
 
-<pre class="example" id="org7296840">
+<pre class="example" id="org8389aa6">
 $ ldd /usr/bin/rsync
         linux-vdso.so.1 (0x00007ffccb34a000)
         libacl.so.1 =&gt; /lib64/libacl.so.1 (0x00007fc406028000)
@@ -624,7 +624,7 @@ only <code>Requires: libsound</code> (as in package name). Then when he/she trie
 to run it:
 </p>
 
-<pre class="example" id="org764670d">
+<pre class="example" id="orgd22d4a2">
 $ musicplayer
 error while loading shared libraries: libsound.so.7: cannot open shared object file: No such file or directory
 </pre>
@@ -735,7 +735,7 @@ includes a command-line tool called <code>zypper</code>. While tools like
 console you will likely interact with <code>zypper</code>.
 </p>
 
-<pre class="example" id="orgeb96317">
+<pre class="example" id="orgf33b50a">
 $ zypper install rsync-3.1.2-1.5.x86_64.rpm
 </pre>
 
@@ -778,7 +778,7 @@ package, and then rpm files are retrieved on demand at installation
 time.
 </p>
 
-<pre class="example" id="org77e9a36">
+<pre class="example" id="orgb4e9b1b">
 $ zypper lr
 
 # | Alias          | Name           | Enabled | GPG Check | Refresh
@@ -840,7 +840,7 @@ rpm files into its cache.
 <div id="outline-container-refreshing-a-repository" class="outline-4">
 <h4 id="refreshing-a-repository">Refreshing a repository</h4>
 <div class="outline-text-4" id="text-refreshing-a-repository">
-<pre class="example" id="orgd39bdcb">
+<pre class="example" id="org8245dc0">
 $ zypper ref
 </pre>
 
@@ -972,7 +972,7 @@ Patterns are used to install a collection of software in a comfortable
 way. For example you can install a working Laptop-oriented system with:
 </p>
 
-<pre class="example" id="org277dbf3">
+<pre class="example" id="orgf895637">
 $ zypper install -t pattern laptop
 </pre>
 
@@ -1001,7 +1001,7 @@ of the magic behind patterns (equivalent to
 Similar to patterns, products can be queried with:
 </p>
 
-<pre class="example" id="orgeb065bd">
+<pre class="example" id="orgb9c63b3">
 $ zypper search -t product
 </pre>
 
@@ -1044,7 +1044,7 @@ package manager will dynamically read <code>/sys/devices</code> and make this
 entity have provides like:
 </p>
 
-<pre class="example" id="orgfcb00f5">
+<pre class="example" id="org74377fe">
 Provides :modalias(pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 </pre>
 
@@ -1053,7 +1053,7 @@ Then, a package providing a WLAN driver for some cards (e.g.
 <code>wlan-kmp-default</code>), could have the following dependencies:
 </p>
 
-<pre class="example" id="org8e7bad0">
+<pre class="example" id="org155f4e1">
 Supplements: modalias(kernel-default:pci:v0000104Cd0000840[01]sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v0000104Cd00009066sv*sd*bc*sc*i*)
 Supplements: modalias(kernel-default:pci:v000010B7d00006000sv*sd*bc*sc*i*)
@@ -1102,7 +1102,7 @@ injected as we already mentioned), and how the content of the package is
 created. A very simple spec file would be:
 </p>
 
-<pre class="example" id="orgab8deb0">
+<pre class="example" id="org4289543">
 Name:           mypackage
 Version:        1.0
 Release:        0
@@ -1150,7 +1150,7 @@ like <code>%{_prefix}</code>, <code>%{_datadir}</code>, <code>%{_mandir}</code>,
 <code>%{_bindir}</code>, etc. You can evaluate a macro like this:
 </p>
 
-<pre class="example" id="org9220a82">
+<pre class="example" id="orgb36ea34">
 $ rpm --eval "%{_libdir}"
 /usr/lib64
 </pre>
@@ -1203,7 +1203,7 @@ file to be in a specific location, so I usually tweak the standard
 configuration so that spec files are searched in the current directory:
 </p>
 
-<pre class="example" id="org7184184">
+<pre class="example" id="orge3454c6">
 $ cat ~/.rpmmacros
 %topdir /space/packages
 %_builddir %{topdir}/build
@@ -1222,7 +1222,7 @@ As you can see, I also configure it so that built packages are saved in
 Once I have this setup, I can do:
 </p>
 
-<pre class="example" id="orga7c8873">
+<pre class="example" id="org12edc60">
 $ rpmbuild -bb mypackage.spec
 Executing(%install): /bin/sh -e /var/tmp/rpm-tmp.lVzwnj
 + umask 022
@@ -1247,7 +1247,7 @@ Executing(%clean): /bin/sh -e /var/tmp/rpm-tmp.0xLGri
 Now I can verify the content of the package:
 </p>
 
-<pre class="example" id="org8abd24b">
+<pre class="example" id="org9941aac">
 % rpm -qpl /space/packages/rpms/x86_64/mypackage-1.0-0.x86_64.rpm
 /usr/share/mypackage/CONTENT
 </pre>
@@ -1307,7 +1307,7 @@ On the other hand, the original <code>oracle-instantclient-sqlplus</code> packag
 is required at runtime, but we don&rsquo;t need it to build our package.
 </p>
 
-<pre class="example" id="org9c64a6d">
+<pre class="example" id="orgfe6e68d">
 Name:           gqlplus
 Version:        1.15
 Release:        0
@@ -1375,7 +1375,7 @@ installed by the -devel packages, it will be scanned and the right
 <code>Requires</code> injected:
 </p>
 
-<pre class="example" id="orgc238c5c">
+<pre class="example" id="orga3e05bc">
 $ rpm -qp --requires gqlplus-1.15-0.x86_64.rpm
 libc.so.6()(64bit)
 ...
@@ -1390,7 +1390,7 @@ These symbols are provided by the right package, so the solver will
 match them:
 </p>
 
-<pre class="example" id="orge299208">
+<pre class="example" id="orgec4eecd">
 rpm -q --whatprovides 'libncurses.so.6()(64bit)'
 libncurses6-6.0-19.1.x86_64
 </pre>
@@ -1461,7 +1461,7 @@ right order and re-published.
 </p>
 
 
-<figure id="orgb976557">
+<figure id="org22db43c">
 <img src="images/gqlplus-obs.png" alt="gqlplus-obs.png">
 
 </figure>
@@ -1485,7 +1485,7 @@ With the <code>osc</code> tool you can checkout packages from OBS, make changes 
 resubmit them.
 </p>
 
-<pre class="example" id="orgfafb004">
+<pre class="example" id="orgf99bc21">
 $ osc co home:dmacvicar gqlplus
 A    home:dmacvicar
 A    home:dmacvicar/gqlplus
@@ -1505,7 +1505,7 @@ machine), setting up that environment automatically using the
 a different distribution than the one you are running.
 </p>
 
-<pre class="example" id="org586a8f2">
+<pre class="example" id="org8f440b5">
 $ cd home:dmacvicar/gqlplus
 $ osc build openSUSE_Leap_42.2
 ...
@@ -1534,7 +1534,7 @@ sources by hundreds of contributors.
 The <code>spec-cleaner</code> tool can help you keeping your spec file in shape:
 </p>
 
-<pre class="example" id="orge16ab9f">
+<pre class="example" id="orgc8c61d8">
 $ spec-cleaner -i gqlplus.spec
 </pre>
 
@@ -1586,7 +1586,7 @@ developed. It is easy to find the devel project using the <code>develproject</co
 (<code>dp</code>) command:
 </p>
 
-<pre class="example" id="org679bf94">
+<pre class="example" id="orgebd3f16">
 $ osc dp openSUSE:Factory rsync
 network
 </pre>
@@ -1596,7 +1596,7 @@ Create a branch and a local checkout of the package using the <code>branch</code
 command:
 </p>
 
-<pre class="example" id="orgdddcb87">
+<pre class="example" id="org30a3797">
 $ osc bco network rsync
 A    home:dmacvicar:branches:network
 A    home:dmacvicar:branches:network/rsync
@@ -1627,7 +1627,7 @@ into the devel project. To do this, use the <code>submitrequest</code> (<code>sr
 command:
 </p>
 
-<pre class="example" id="org3a90520">
+<pre class="example" id="orgc420ca4">
 $ osc sr
 </pre>
 
@@ -1646,7 +1646,7 @@ needed, however.
 <footer id="postamble" class="status">
 <p class="date">Date: 2017-03-08</p>
 <p class="author">Author: Duncan Mac-Vicar P.</p>
-<p class="date">Created: 11 Dec. 2021</p>
+<p class="date">Created: 02 Jan. 2022</p>
 </footer>
 </body>
 </html>
