--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 11 Dec. 2021 -->
+<!-- 02 Jan. 2022 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>My homepage with org-mode</title>
@@ -19,6 +19,7 @@
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet' integrity='sha256-k2/8zcNbxVIh5mnQ52A0r3a6jAgMGxFJFE2707UxGCk= sha512-ZV9KawG2Legkwp3nAlxLIVFudTauWuBpC10uEafMHYL0Sarrz5A7G79kXh5+5+woxQ5HM559XX2UZjMJ36Wplg==' crossorigin='anonymous'/>
 <meta description='The blog of Duncan Mac-Vicar P.'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Duncan Mac-Vicar P.' href='posts/rss.xml'/>
+<link rel='stylesheet' href='css/index.css?v=947370da49ce6a70746b3cb8a4de44c929ca0b1e3d6ca60c89603f567a841a26'/>
 <link rel="stylesheet" href="css/site.css?v=e21a1eb21340254d7e0023bf45ef785954bb24f4151e4abcd60e4c86799b8d8b" type="text/css">
 </head>
 <body>
@@ -56,32 +57,32 @@
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="orgc6438a6">
+<figure id="org333c87a">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><img src="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" alt="badge.svg" class="org-svg"></a>
 
 </figure>
 
-<section id="outline-container-orga85f314" class="outline-2">
-<h2 id="orga85f314">Introduction</h2>
-<div class="outline-text-2" id="text-orga85f314">
+<section id="outline-container-org37697f3" class="outline-2">
+<h2 id="org37697f3">Introduction</h2>
+<div class="outline-text-2" id="text-org37697f3">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-orgce95e0b" class="outline-2">
-<h2 id="orgce95e0b">Implementation</h2>
-<div class="outline-text-2" id="text-orgce95e0b">
+<section id="outline-container-org51ac3a3" class="outline-2">
+<h2 id="org51ac3a3">Implementation</h2>
+<div class="outline-text-2" id="text-org51ac3a3">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-orgd072def" class="outline-2">
-<h2 id="orgd072def">Usage</h2>
-<div class="outline-text-2" id="text-orgd072def">
+<section id="outline-container-orgbd7c04b" class="outline-2">
+<h2 id="orgbd7c04b">Usage</h2>
+<div class="outline-text-2" id="text-orgbd7c04b">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -92,7 +93,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="org503e848">
+<pre class="example" id="org2391eb2">
 $ make
 </pre>
 
@@ -101,9 +102,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-org40a4474" class="outline-3">
-<h3 id="org40a4474">RSS Feeds</h3>
-<div class="outline-text-3" id="text-org40a4474">
+<div id="outline-container-org88887df" class="outline-3">
+<h3 id="org88887df">RSS Feeds</h3>
+<div class="outline-text-3" id="text-org88887df">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -160,13 +161,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-org28bb770" class="outline-2">
-<h2 id="org28bb770">Features</h2>
-<div class="outline-text-2" id="text-org28bb770">
+<section id="outline-container-org0df4bd9" class="outline-2">
+<h2 id="org0df4bd9">Features</h2>
+<div class="outline-text-2" id="text-org0df4bd9">
 </div>
-<div id="outline-container-org81281c9" class="outline-4">
-<h4 id="org81281c9">Redirection</h4>
-<div class="outline-text-4" id="text-org81281c9">
+<div id="outline-container-org492f22b" class="outline-4">
+<h4 id="org492f22b">Redirection</h4>
+<div class="outline-text-4" id="text-org492f22b">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -179,9 +180,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-orga3541c6" class="outline-3">
-<h3 id="orga3541c6">Drafts</h3>
-<div class="outline-text-3" id="text-orga3541c6">
+<div id="outline-container-org81c02ff" class="outline-3">
+<h3 id="org81c02ff">Drafts</h3>
+<div class="outline-text-3" id="text-org81c02ff">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -198,9 +199,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-org3a57aa9" class="outline-2">
-<h2 id="org3a57aa9">License</h2>
-<div class="outline-text-2" id="text-org3a57aa9">
+<section id="outline-container-org04cc534" class="outline-2">
+<h2 id="org04cc534">License</h2>
+<div class="outline-text-2" id="text-org04cc534">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
@@ -214,7 +215,7 @@ The content of the site, Copyright (©) 2014-2019 Duncan Mac-Vicar P..
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 11 Dec. 2021. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
+<p>Last updated 02 Jan. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
