--- a/setup.html
+++ b/setup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 11 Dec. 2021 -->
+<!-- 02 Jan. 2022 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>My personal setup</title>
@@ -19,6 +19,7 @@
 <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet' integrity='sha256-k2/8zcNbxVIh5mnQ52A0r3a6jAgMGxFJFE2707UxGCk= sha512-ZV9KawG2Legkwp3nAlxLIVFudTauWuBpC10uEafMHYL0Sarrz5A7G79kXh5+5+woxQ5HM559XX2UZjMJ36Wplg==' crossorigin='anonymous'/>
 <meta description='The blog of Duncan Mac-Vicar P.'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Duncan Mac-Vicar P.' href='posts/rss.xml'/>
+<link rel='stylesheet' href='css/index.css?v=947370da49ce6a70746b3cb8a4de44c929ca0b1e3d6ca60c89603f567a841a26'/>
 <link rel="stylesheet" href="css/site.css?v=e21a1eb21340254d7e0023bf45ef785954bb24f4151e4abcd60e4c86799b8d8b" type="text/css">
 </head>
 <body>
@@ -56,19 +57,21 @@
 <header>
 <h1 class="title">My personal setup</h1>
 </header>
-<section id="outline-container-org21994c5" class="outline-2">
-<h2 id="org21994c5">General setup</h2>
-<div class="outline-text-2" id="text-org21994c5">
+<section id="outline-container-org1b60721" class="outline-2">
+<h2 id="org1b60721">General setup</h2>
+<div class="outline-text-2" id="text-org1b60721">
 <p>
-Most of my personal computing is done on a <a href="https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x230">Thinkpad X230</a> from 2012.
+I like Thinkpads. Until July 2021, I used a 12&ldquo; <a href="https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x230">Thinkpad X230</a> from 2012. Nowadays I use a <a href="https://www.lenovo.com/us/en/p/laptops/thinkpad/thinkpadx/ThinkPad-X13-(Intel)-/22TPX13X3N1">Thinkpad X13</a>.
 </p>
 
 <ul class="org-ul">
 <li>A quite fresh <a href="https://software.opensuse.org/distributions/tumbleweed">openSUSE Tumbleweed</a> as operating system/distro</li>
-<li><a href="https://www.gnome.org">GNOME</a> as desktop environment, no customizations</li>
-<li><a href="https://github.com/dmacvicar/dotfiles">dotfiles</a> managed with git and <a href="https://www.gnu.org/software/stow">GNU Stow</a></li>
-<li><a href="https://syncthing.net">Syncthing</a> to Peer-to-Peer sync some files across different devices</li>
-<li>Passwords managed with <a href="https://keepassxc.org">KeePassXC</a> (synced with Syncthing)</li>
+<li>Lately, I install user software using <a href="https://nixos.org/">Nix</a> on top of Linux, instead of relying mostly on my distro packages. It allows to share installations across users while still allowing per-user profiles and  versions. When using different users for private/work, this works very well.</li>
+<li><a href="https://www.gnome.org">GNOME</a> as desktop environment, no customization.</li>
+<li><a href="https://github.com/dmacvicar/dotfiles">dotfiles</a> managed with git and <a href="https://www.gnu.org/software/stow">GNU Stow</a>.</li>
+<li><del><a href="https://syncthing.net">Syncthing</a> to Peer-to-Peer sync some files across different devices</del>
+Not used much anymore since <a href="https://github.com/syncthing/syncthing-lite">Syncthing Lite</a> was deprecated and stopped working on Mobile. Moved most syncthing to Nextcloud.</li>
+<li>Passwords managed with <a href="https://keepassxc.org">KeePassXC</a> (synced with Nextcloud)</li>
 <li><a href="https://www.yubico.com/products">Yubikey</a> device and <a href="https://developers.yubico.com/OATH">yubikey-oath</a> for 2FA on Desktop and mobile</li>
 <li><a href="https://www.mozilla.org/exp/firefox/new">Firefox</a> as Web browser, with some extensions
 <ul class="org-ul">
@@ -81,11 +84,12 @@ Most of my personal computing is done on a <a href="https://www.lenovo.com/us/en
 <li><a href="https://nextcloud.com/clients">NextCloud clients</a> to sync files with NextCloud on desktop and mobile</li>
 <li><a href="https://orgmode.org">Org-mode</a> (&ldquo;Your life in text mode&rdquo;) on top of <a href="https://www.gnu.org/software/emacs">Emacs</a> to organize notes, journals and information. It also powers this website.
 <ul class="org-ul">
-<li>Synced with Syncthing</li>
+<li>Synced with Nextcloud</li>
 <li><a href="https://play.google.com/store/apps/details?id=com.orgzly">Orgzly</a> as TODO widget on Android</li>
 <li><a href="https://play.google.com/store/apps/details?id=com.madlonkay.orgro">Orgro</a> as Org file viewer on Android</li>
 </ul></li>
 <li><a href="http://www.tarsnap.com">tarsnap</a> for backups</li>
+<li><a href="https://restic.net/">restic</a> for backups</li>
 </ul>
 
 <p>
@@ -96,25 +100,18 @@ You can also read some details about the setup for my <a href="music.html">music
 I also have a small Home &ldquo;Lab&rdquo;
 </p>
 <ul class="org-ul">
-<li>2 Raspberry Pi 3 running openSUSE Leap 15.1</li>
+<li>3 Raspberry Pi 3/4 running openSUSE Leap 15.2 and [k3s](<a href="https://k3s.io/">https://k3s.io/</a>)</li>
 <li>1 <a href="https://linux-sunxi.org/Pine64">Pine64</a> running OpenBSD 6.7</li>
-<li><a href="https://www.home-assistant.io/">HomeAssistant</a></li>
-<li>Managed by <a href="https://docs.saltstack.com/en/latest/topics/ssh">salt-ssh</a></li>
+<li>1 <a href="https://linux-sunxi.org/Pine64">Pine64</a> running FreeBSD</li>
+<li><a href="https://www.home-assistant.io/">HomeAssistant</a>.</li>
+<li>Managed by <a href="https://docs.saltstack.com/en/latest/topics/ssh">salt-ssh</a> (looking for a replacement).</li>
 </ul>
 </div>
 </section>
 
-<section id="outline-container-org9d2d69e" class="outline-2">
-<h2 id="org9d2d69e">Work</h2>
-<div class="outline-text-2" id="text-org9d2d69e">
-<p>
-Most of my work happens on a <a href="https://www.lenovo.com/us/en/laptops/thinkpad/x-series/x220">Thinkpad X220</a> from 2011, except for video-conferencing, for which I use my iPad, as the laptop is not powerful enough.
-</p>
-</div>
-
-<div id="outline-container-org0aa73ba" class="outline-4">
-<h4 id="org0aa73ba">Work mail setup</h4>
-<div class="outline-text-4" id="text-org0aa73ba">
+<section id="outline-container-orgc601e35" class="outline-2">
+<h2 id="orgc601e35">Work</h2>
+<div class="outline-text-2" id="text-orgc601e35">
 <ul class="org-ul">
 <li><a href="http://isync.sourceforge.net">mbsync</a> to synchronize IMAP locally</li>
 <li><a href="https://marlam.de/msmtp">msmtp</a> to send email</li>
@@ -127,59 +124,57 @@ Most of my work happens on a <a href="https://www.lenovo.com/us/en/laptops/think
 </ul>
 
 <p>
-You can find this setup in my <a href="https://gitlab.suse.de/dmacvicar/dotfiles.suse">internal dotfiles</a> repository.
+This setup is kept in an internal dotfiles repository.
 </p>
 </div>
-</div>
 
-<div id="outline-container-org6c01ba6" class="outline-4">
-<h4 id="org6c01ba6">Other</h4>
-<div class="outline-text-4" id="text-org6c01ba6">
+<div id="outline-container-orgdf74f1b" class="outline-4">
+<h4 id="orgdf74f1b">Other</h4>
+<div class="outline-text-4" id="text-orgdf74f1b">
 <ul class="org-ul">
 <li><a href="https://github.com/abraunegg/onedrive">unofficial onedrive client</a> to sync files to OneDrive</li>
-<li><a href="https://restic.net/">restic</a> for backups</li>
 <li><a href="https://www.bose.com/products/headphones/noise_cancelling_headphones/noise-cancelling-headphones-700.html">Bose 700</a> noise cancelling headphones for a great confcall experience</li>
-<li><a href="https://www.jabra.com.de/business/speakerphones/jabra-speak-series/jabra-speak-510">Jabra Speaker</a> for mobile conferences involving more than one person in the room</li>
 </ul>
 </div>
 </div>
 </section>
 
-<section id="outline-container-org9f218d0" class="outline-2">
-<h2 id="org9f218d0">Development environment</h2>
-<div class="outline-text-2" id="text-org9f218d0">
+<section id="outline-container-orgde80427" class="outline-2">
+<h2 id="orgde80427">Development environment</h2>
+<div class="outline-text-2" id="text-orgde80427">
 <ul class="org-ul">
 <li><a href="https://www.gnu.org/software/emacs">Emacs</a> as editor for most languages, with <a href="https://raw.githubusercontent.com/dmacvicar/dotfiles/master/emacs/.emacs.d/init.el">many</a> extensions. Some highlights:
 <ul class="org-ul">
+<li><a href="https://github.com/hlissner/doom-emacs">Doom Emacs</a> as the Emacs distribution</li>
 <li><a href="https://melpa.org/#/lsp-mode">LSP mode</a> to take advantage of all <a href="https://en.wikipedia.org/wiki/Language_Server_Protocol">LSP</a> servers out there</li>
 <li><a href="https://magit.vc">Magit</a> as a git front-end</li>
 </ul></li>
 <li><a href="https://github.com/tmux/tmux/wiki">tmux</a> to manage my consoles and to split the screen in my favourite layout (editor left side, two command lines right side)</li>
-<li>Given my open-source background, I have to dig in code writen in many languages. My go-to languages are C++, Golang and Ruby depending on the task.</li>
+<li>Given my open-source background, I have to dig in code written in many languages. My go-to languages are C++, Golang and Ruby depending on the task.</li>
 </ul>
 </div>
 
-<div id="outline-container-org97b56c4" class="outline-4">
-<h4 id="org97b56c4">C++</h4>
-<div class="outline-text-4" id="text-org97b56c4">
+<div id="outline-container-orgdee9957" class="outline-4">
+<h4 id="orgdee9957">C++</h4>
+<div class="outline-text-4" id="text-orgdee9957">
 <ul class="org-ul">
 <li><a href="https://cmake.org">CMake</a> as build system and to fetch dependencies</li>
 <li><a href="https://clang.llvm.org/">clang</a> provides most of the features to lsp-mode in Emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgefe4c2e" class="outline-4">
-<h4 id="orgefe4c2e">Ruby</h4>
-<div class="outline-text-4" id="text-orgefe4c2e">
+<div id="outline-container-org3fcaedc" class="outline-4">
+<h4 id="org3fcaedc">Ruby</h4>
+<div class="outline-text-4" id="text-org3fcaedc">
 <ul class="org-ul">
 <li>I use the distribution interpreter and <a href="https://bundler.io">bundler</a> to vendor dependencies inside the project</li>
 <li>I use the <a href="https://solargraph.org">Solargraph</a> gem to power lsp-mode in emacs</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org5f098a8" class="outline-4">
-<h4 id="org5f098a8">Golang</h4>
-<div class="outline-text-4" id="text-org5f098a8">
+<div id="outline-container-orga78b596" class="outline-4">
+<h4 id="orga78b596">Golang</h4>
+<div class="outline-text-4" id="text-orga78b596">
 <ul class="org-ul">
 <li>I just use the standard Go modules</li>
 <li><a href="https://github.com/golang/tools/tree/master/gopls">gopls</a> to power lsp-mode in emacs</li>
@@ -191,7 +186,7 @@ You can find this setup in my <a href="https://gitlab.suse.de/dmacvicar/dotfiles
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 11 Dec. 2021. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
+<p>Last updated 02 Jan. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
