--- a/snippets/preamble.html
+++ b/snippets/preamble.html
@@ -1,28 +1,7 @@
-<aside>
-  <h1>Hi.</h1>
   <a href="/">
+  <div class="logo">
     <img src="https://www.gravatar.com/avatar/3b67365812827fa25df5093b38934a8f?s=80" class="avatar" alt="My photo"/>
-  </a>
-  <h2>I'm <a href="/">Duncan Mac-Vicar P.</a></h2>
-  <div id="bio">
-    <small><p>I am inspired by creating software and learning from others.</p>
-      <p>When things break, I fix them or go play guitar...</p></small>
-  </div>
-  <div id="social">
-    Follow me:
-    <div id="stalker">
-      <a title="dmacvicar on Github" href="https://github.com/dmacvicar">
-        <i class="fa fa-github-square"></i>
-      </a>
-      <a title="dmacvicar on Hacker News" href="https://news.ycombinator.com/user?id=dmacvicar">
-        <i class="fa fa-hacker-news"></i>
-      </a>
-      <a title="dmacvicar on Twitter" href="https://twitter.com/dmacvicar">
-        <i class="fa fa-twitter-square"></i>
-      </a>
-      <a title="RSS feed" id="atom" href="posts/rss.xml">
-        <i class="fa fa-rss-square"></i>
-      </a>
+    <h2>Duncan Mac-Vicar P.</h2>
     </div>
-  </div>
-</aside>
+    </a>
+  <sub>I am inspired by creating software and learning from others. When things break, I fix them or go play guitar...</sub>
