deploy: e94fd729297ffe088e1eae2f59023768ce80b739

--- a/README.html
+++ b/README.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 02 Jan. 2022 -->
+<!-- 22 May. 2022 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>My homepage with org-mode</title>
@@ -16,73 +16,65 @@
 
   gtag('config', 'UA-1687066-2');
 </script>
-<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet' integrity='sha256-k2/8zcNbxVIh5mnQ52A0r3a6jAgMGxFJFE2707UxGCk= sha512-ZV9KawG2Legkwp3nAlxLIVFudTauWuBpC10uEafMHYL0Sarrz5A7G79kXh5+5+woxQ5HM559XX2UZjMJ36Wplg==' crossorigin='anonymous'/>
+<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' rel='stylesheet' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
 <meta description='The blog of Duncan Mac-Vicar P.'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Duncan Mac-Vicar P.' href='posts/rss.xml'/>
-<link rel='stylesheet' href='css/index.css?v=947370da49ce6a70746b3cb8a4de44c929ca0b1e3d6ca60c89603f567a841a26'/>
-<link rel="stylesheet" href="css/site.css?v=e21a1eb21340254d7e0023bf45ef785954bb24f4151e4abcd60e4c86799b8d8b" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=d06246555179cc693994c6cd6cd74faed6bc08c754a9ae99c23e96ba131806e7" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
-<aside>
-  <h1>Hi.</h1>
-  <a href="/">
-    <img src="https://www.gravatar.com/avatar/3b67365812827fa25df5093b38934a8f?s=80" class="avatar" alt="My photo"/>
-  </a>
-  <h2>I'm <a href="/">Duncan Mac-Vicar P.</a></h2>
-  <div id="bio">
-    <small><p>I am inspired by creating software and learning from others.</p>
-      <p>When things break, I fix them or go play guitar...</p></small>
-  </div>
-  <div id="social">
-    Follow me:
-    <div id="stalker">
-      <a title="dmacvicar on Github" href="https://github.com/dmacvicar">
-        <i class="fa fa-github-square"></i>
+  <div class="logo">
+      <a href="/">
+      <img src="https://www.gravatar.com/avatar/3b67365812827fa25df5093b38934a8f?s=80" class="avatar" alt="My photo"/>
+      </a>
+      <a href="/"><h2>Duncan Mac-Vicar P.</h2></a>
+      <div id="social">
+        <a title="dmacvicar on Github" href="https://github.com/dmacvicar">
+          <i class="fa-brands fa-github"></i>
       </a>
       <a title="dmacvicar on Hacker News" href="https://news.ycombinator.com/user?id=dmacvicar">
-        <i class="fa fa-hacker-news"></i>
+        <i class="fa-brands fa-hacker-news"></i>
       </a>
       <a title="dmacvicar on Twitter" href="https://twitter.com/dmacvicar">
-        <i class="fa fa-twitter-square"></i>
+        <i class="fa-brands fa-twitter"></i>
       </a>
       <a title="RSS feed" id="atom" href="posts/rss.xml">
-        <i class="fa fa-rss-square"></i>
+        <i class="fa-solid fa-rss"></i>
       </a>
-    </div>
-  </div>
-</aside>
+   </div>
+ </div>
+ <sub>I am inspired by creating software and learning from others. When things break, I fix them or go play guitar <i class="fa-solid fa-guitar"></i> ...</sub>
 </header>
 <main id="content" class="content">
 <header>
 <h1 class="title">My homepage with org-mode</h1>
 </header>
-<figure id="org333c87a">
+<figure id="org1cd626e">
 <a href="https://github.com/dmacvicar/site.org/actions?query=workflow%3A%22Build+and+publish+to+pages%22"><img src="https://github.com/dmacvicar/site.org/workflows/Build%20and%20publish%20to%20pages/badge.svg" alt="badge.svg" class="org-svg"></a>
 
 </figure>
 
-<section id="outline-container-org37697f3" class="outline-2">
-<h2 id="org37697f3">Introduction</h2>
-<div class="outline-text-2" id="text-org37697f3">
+<section id="outline-container-org6093087" class="outline-2">
+<h2 id="org6093087">Introduction</h2>
+<div class="outline-text-2" id="text-org6093087">
 <p>
 This setup based on <a href="https://orgmode.org">org-mode</a> aims to replace my previous <a href="https://jekyllrb.com">Jekyll</a> setup used to publish my site.
 </p>
 </div>
 </section>
 
-<section id="outline-container-org51ac3a3" class="outline-2">
-<h2 id="org51ac3a3">Implementation</h2>
-<div class="outline-text-2" id="text-org51ac3a3">
+<section id="outline-container-org00b3927" class="outline-2">
+<h2 id="org00b3927">Implementation</h2>
+<div class="outline-text-2" id="text-org00b3927">
 <p>
 For details about the implementation see <a href="posts/2019-09-03-migrating-from-jekyll-to-org/index.html">the introductory post</a> and the <a href="https://github.com/dmacvicar/site.org"><i aria-hidden='true' class='fa fa-github'></i> Source</a>.
 </p>
 </div>
 </section>
 
-<section id="outline-container-orgbd7c04b" class="outline-2">
-<h2 id="orgbd7c04b">Usage</h2>
-<div class="outline-text-2" id="text-orgbd7c04b">
+<section id="outline-container-org744df02" class="outline-2">
+<h2 id="org744df02">Usage</h2>
+<div class="outline-text-2" id="text-org744df02">
 <ul class="org-ul">
 <li>Posts go into <code>posts/</code>
 Preferably in their own subdirectory together with all their assets (self-contained)</li>
@@ -93,7 +85,7 @@ Preferably in their own subdirectory together with all their assets (self-contai
 To generate:
 </p>
 
-<pre class="example" id="org2391eb2">
+<pre class="example" id="orgeed96e5">
 $ make
 </pre>
 
@@ -102,9 +94,9 @@ The output site will be rendered in <code>public/</code>.
 </p>
 </div>
 
-<div id="outline-container-org88887df" class="outline-3">
-<h3 id="org88887df">RSS Feeds</h3>
-<div class="outline-text-3" id="text-org88887df">
+<div id="outline-container-org5d79519" class="outline-3">
+<h3 id="org5d79519">RSS Feeds</h3>
+<div class="outline-text-3" id="text-org5d79519">
 <p>
 I am documenting this part because it is complicated and I tend to forget how it works everytime something breaks.
 </p>
@@ -161,13 +153,13 @@ The <span class="underline">RSS</span> exporter will then use the property for t
 </div>
 </section>
 
-<section id="outline-container-org0df4bd9" class="outline-2">
-<h2 id="org0df4bd9">Features</h2>
-<div class="outline-text-2" id="text-org0df4bd9">
+<section id="outline-container-org9e3a336" class="outline-2">
+<h2 id="org9e3a336">Features</h2>
+<div class="outline-text-2" id="text-org9e3a336">
 </div>
-<div id="outline-container-org492f22b" class="outline-4">
-<h4 id="org492f22b">Redirection</h4>
-<div class="outline-text-4" id="text-org492f22b">
+<div id="outline-container-org27481d8" class="outline-4">
+<h4 id="org27481d8">Redirection</h4>
+<div class="outline-text-4" id="text-org27481d8">
 <p>
 When the site was generated using Jekyll, posts where generated in the <code>/:year/:month/:day/:id.html</code> route.
 In order to generate a redirect page, use the following keyword to generate a redirect page:
@@ -180,9 +172,9 @@ In order to generate a redirect page, use the following keyword to generate a re
 </div>
 </div>
 
-<div id="outline-container-org81c02ff" class="outline-3">
-<h3 id="org81c02ff">Drafts</h3>
-<div class="outline-text-3" id="text-org81c02ff">
+<div id="outline-container-orgfabdeeb" class="outline-3">
+<h3 id="orgfabdeeb">Drafts</h3>
+<div class="outline-text-3" id="text-orgfabdeeb">
 <p>
 To hide a post from the list of recent posts or the full archive, use:
 </p>
@@ -199,9 +191,9 @@ Note that the post will still be published, but you will need to access it by it
 </div>
 </section>
 
-<section id="outline-container-org04cc534" class="outline-2">
-<h2 id="org04cc534">License</h2>
-<div class="outline-text-2" id="text-org04cc534">
+<section id="outline-container-orge25b201" class="outline-2">
+<h2 id="orge25b201">License</h2>
+<div class="outline-text-2" id="text-orge25b201">
 <p>
 The code used for generating the site is licensed under the <a href="LICENSE">MIT</a> license.
 </p>
@@ -215,7 +207,7 @@ The content of the site, Copyright (©) 2014-2019 Duncan Mac-Vicar P..
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 02 Jan. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
+<p>Last updated 22 May. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
