--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 02 Jan. 2022 -->
+<!-- 22 May. 2022 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Duncan Mac-Vicar P.</title>
@@ -16,51 +16,44 @@
 
   gtag('config', 'UA-1687066-2');
 </script>
-<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet' integrity='sha256-k2/8zcNbxVIh5mnQ52A0r3a6jAgMGxFJFE2707UxGCk= sha512-ZV9KawG2Legkwp3nAlxLIVFudTauWuBpC10uEafMHYL0Sarrz5A7G79kXh5+5+woxQ5HM559XX2UZjMJ36Wplg==' crossorigin='anonymous'/>
+<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' rel='stylesheet' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
 <meta description='The blog of Duncan Mac-Vicar P.'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Duncan Mac-Vicar P.' href='posts/rss.xml'/>
 <link rel='stylesheet' href='css/index.css?v=947370da49ce6a70746b3cb8a4de44c929ca0b1e3d6ca60c89603f567a841a26'/>
-<link rel="stylesheet" href="css/site.css?v=e21a1eb21340254d7e0023bf45ef785954bb24f4151e4abcd60e4c86799b8d8b" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=d06246555179cc693994c6cd6cd74faed6bc08c754a9ae99c23e96ba131806e7" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
-<aside>
-  <h1>Hi.</h1>
-  <a href="/">
-    <img src="https://www.gravatar.com/avatar/3b67365812827fa25df5093b38934a8f?s=80" class="avatar" alt="My photo"/>
-  </a>
-  <h2>I'm <a href="/">Duncan Mac-Vicar P.</a></h2>
-  <div id="bio">
-    <small><p>I am inspired by creating software and learning from others.</p>
-      <p>When things break, I fix them or go play guitar...</p></small>
-  </div>
-  <div id="social">
-    Follow me:
-    <div id="stalker">
-      <a title="dmacvicar on Github" href="https://github.com/dmacvicar">
-        <i class="fa fa-github-square"></i>
+  <div class="logo">
+      <a href="/">
+      <img src="https://www.gravatar.com/avatar/3b67365812827fa25df5093b38934a8f?s=80" class="avatar" alt="My photo"/>
+      </a>
+      <a href="/"><h2>Duncan Mac-Vicar P.</h2></a>
+      <div id="social">
+        <a title="dmacvicar on Github" href="https://github.com/dmacvicar">
+          <i class="fa-brands fa-github"></i>
       </a>
       <a title="dmacvicar on Hacker News" href="https://news.ycombinator.com/user?id=dmacvicar">
-        <i class="fa fa-hacker-news"></i>
+        <i class="fa-brands fa-hacker-news"></i>
       </a>
       <a title="dmacvicar on Twitter" href="https://twitter.com/dmacvicar">
-        <i class="fa fa-twitter-square"></i>
+        <i class="fa-brands fa-twitter"></i>
       </a>
       <a title="RSS feed" id="atom" href="posts/rss.xml">
-        <i class="fa fa-rss-square"></i>
+        <i class="fa-solid fa-rss"></i>
       </a>
-    </div>
-  </div>
-</aside>
+   </div>
+ </div>
+ <sub>I am inspired by creating software and learning from others. When things break, I fix them or go play guitar <i class="fa-solid fa-guitar"></i> ...</sub>
 </header>
 <main id="content" class="content">
 <header>
 <h1 class="title">Duncan Mac-Vicar P.</h1>
 </header>
 
-<section id="outline-container-org069436d" class="outline-2 post-list">
-<h2 id="org069436d"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
-<div class="outline-text-2" id="text-org069436d">
+<section id="outline-container-orgb48e7b2" class="outline-2 post-list">
+<h2 id="orgb48e7b2"><i aria-hidden='true' class='fa fa-bookmark'></i> Latest writings</h2>
+<div class="outline-text-2" id="text-orgb48e7b2">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">20 Oct 2020</span></span>  <a href="posts/2020-10-20-migrating-away-google-services/index.html">Migrating away from Google services</a></li>
 <li><span class="timestamp-wrapper"><span class="timestamp">14 Sep 2020</span></span>  <a href="posts/2020-09-14-prose-linting-vale-emacs.org/index.html">Prose linting with Vale and Emacs</a></li>
@@ -77,9 +70,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-org4bd7076" class="outline-2 post-list">
-<h2 id="org4bd7076"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
-<div class="outline-text-2" id="text-org4bd7076">
+<section id="outline-container-orgb80e577" class="outline-2 post-list">
+<h2 id="orgb80e577"><i aria-hidden='true' class='fa fa-code'></i> Projects/Code</h2>
+<div class="outline-text-2" id="text-orgb80e577">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">27 Feb 2016</span></span> an attempt to write a <a href="https://github.com/dmacvicar/terraform-provider-libvirt">libvirt provider</a> for <a href="https://terraform.io">Terraform</a>.</li>
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Jan 2016</span></span> As part of my work, I had the chance to start contributing to <a href="https://github.com/saltstack/salt">Salt</a>.</li>
@@ -98,9 +91,9 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 </div>
 </section>
 
-<section id="outline-container-org770d405" class="outline-2 post-list">
-<h2 id="org770d405"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
-<div class="outline-text-2" id="text-org770d405">
+<section id="outline-container-org1a3e3e0" class="outline-2 post-list">
+<h2 id="org1a3e3e0"><i aria-hidden='true' class='fa fa-graduation-cap'></i> Tutorials</h2>
+<div class="outline-text-2" id="text-org1a3e3e0">
 <ul class="org-ul">
 <li><span class="timestamp-wrapper"><span class="timestamp">08 Mar 2017</span></span> <a href="tutorials/rpm-packaging/index.html">Full overview of RPM based packaging.</a></li>
 </ul>
@@ -110,7 +103,7 @@ Full list at my <a href="./posts/archive.html">my Blog.</a>
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 02 Jan. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
+<p>Last updated 22 May. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
