--- a/music.html
+++ b/music.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 02 Jan. 2022 -->
+<!-- 22 May. 2022 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>My music setup</title>
@@ -16,42 +16,34 @@
 
   gtag('config', 'UA-1687066-2');
 </script>
-<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css' rel='stylesheet' integrity='sha256-k2/8zcNbxVIh5mnQ52A0r3a6jAgMGxFJFE2707UxGCk= sha512-ZV9KawG2Legkwp3nAlxLIVFudTauWuBpC10uEafMHYL0Sarrz5A7G79kXh5+5+woxQ5HM559XX2UZjMJ36Wplg==' crossorigin='anonymous'/>
+<link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' rel='stylesheet' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
 <meta description='The blog of Duncan Mac-Vicar P.'/>
 <link rel='alternate' type='application+rss/xml' title='The blog of Duncan Mac-Vicar P.' href='posts/rss.xml'/>
-<link rel='stylesheet' href='css/index.css?v=947370da49ce6a70746b3cb8a4de44c929ca0b1e3d6ca60c89603f567a841a26'/>
-<link rel="stylesheet" href="css/site.css?v=e21a1eb21340254d7e0023bf45ef785954bb24f4151e4abcd60e4c86799b8d8b" type="text/css">
+<link rel="stylesheet" href="css/site.css?v=d06246555179cc693994c6cd6cd74faed6bc08c754a9ae99c23e96ba131806e7" type="text/css">
 </head>
 <body>
 <header id="preamble" class="status">
-<aside>
-  <h1>Hi.</h1>
-  <a href="/">
-    <img src="https://www.gravatar.com/avatar/3b67365812827fa25df5093b38934a8f?s=80" class="avatar" alt="My photo"/>
-  </a>
-  <h2>I'm <a href="/">Duncan Mac-Vicar P.</a></h2>
-  <div id="bio">
-    <small><p>I am inspired by creating software and learning from others.</p>
-      <p>When things break, I fix them or go play guitar...</p></small>
-  </div>
-  <div id="social">
-    Follow me:
-    <div id="stalker">
-      <a title="dmacvicar on Github" href="https://github.com/dmacvicar">
-        <i class="fa fa-github-square"></i>
+  <div class="logo">
+      <a href="/">
+      <img src="https://www.gravatar.com/avatar/3b67365812827fa25df5093b38934a8f?s=80" class="avatar" alt="My photo"/>
+      </a>
+      <a href="/"><h2>Duncan Mac-Vicar P.</h2></a>
+      <div id="social">
+        <a title="dmacvicar on Github" href="https://github.com/dmacvicar">
+          <i class="fa-brands fa-github"></i>
       </a>
       <a title="dmacvicar on Hacker News" href="https://news.ycombinator.com/user?id=dmacvicar">
-        <i class="fa fa-hacker-news"></i>
+        <i class="fa-brands fa-hacker-news"></i>
       </a>
       <a title="dmacvicar on Twitter" href="https://twitter.com/dmacvicar">
-        <i class="fa fa-twitter-square"></i>
+        <i class="fa-brands fa-twitter"></i>
       </a>
       <a title="RSS feed" id="atom" href="posts/rss.xml">
-        <i class="fa fa-rss-square"></i>
+        <i class="fa-solid fa-rss"></i>
       </a>
-    </div>
-  </div>
-</aside>
+   </div>
+ </div>
+ <sub>I am inspired by creating software and learning from others. When things break, I fix them or go play guitar <i class="fa-solid fa-guitar"></i> ...</sub>
 </header>
 <main id="content" class="content">
 <header>
@@ -98,7 +90,7 @@ My live setup is:
 <footer id="postamble" class="status">
 <p class='disclaimer'>The postings on this site are my own and don't necessarily represent my employer’s positions, strategies or opinions.</p>
 
-<p>Last updated 02 Jan. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
+<p>Last updated 22 May. 2022. Built with <a href="https://www.gnu.org/software/emacs/">Emacs</a> 27.2 (<a href="https://orgmode.org">Org</a> mode 9.4.6). <a href="/README.html">Details</a>.</p>
 </footer>
 </body>
 </html>
